--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -2,6 +2,6 @@
 \subsection{Тактове време}
 \subsection{Ръкопашни схватки}
 \subsection{Стрелба}
-\subsection{Брони
+\subsection{Брони}
 \subsection{Специални правила}
 \subsubsection{Кавалерия}
