.tex extensions are automatically added.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -7,8 +7,8 @@
 % Document body.
 \begin{document}
 \maketitle
-\include{character_creation_and_evolution.tex}
-\include{combat_system.tex}
-\include{magic_system.tex}
+\include{character_creation_and_evolution}
+\include{combat_system}
+\include{magic_system}
 \tableofcontents
 \end{document}
