--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -3,23 +3,14 @@
 
 % Upper part of the page. The '~' is needed because \\
 % only works if a paragraph has stared.
-\includegraphics[width=0.15\textwidth]{../images/dragon}~
+\textsc{\Huge Елементарис}\\[1.5cm]
+\includegraphics[width=0.85\textwidth]{../images/dragon}~
 \\[1cm]
-
-\textsc{LARGE University of beer}\\[1.5cm]
-
-\textsc{\Large Final year project}\\[0.5cm]
-
-% Title
-\HRule \\[0.4cm]  % Hozirontal line.
-{ \huge \bfseries LAger vrewing techniques \\[0.4cm]}
-
-\HRule \\[1.5cm]
 
 \vfill
 
 % Bottom of the page.
-{\large \today}
+\date{}
 
 \end{center}
 \end{titlepage}
