--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -12,10 +12,12 @@
 Ум – Познание, Находчивост
 Излъчване – Карма, Харизма
 
-{\bfСила} – телесна маса, експлозивна сила, статична сила, умение да се концентрира силата на тялото, имунна система
-{\bfЛовкост} – както повратливост и гъвкавост на цялото тяло, скорост, така и прецизност във фините задачи
-{\bfУм} – еродиция, памет, разсъдък, концентрация, наблюдателност
-{\bfХаризма} – увереност, емпатия, изразителност
+\begin{itemize}
+\item {\bfСила} – телесна маса, експлозивна сила, статична сила, умение да се концентрира силата на тялото, имунна система
+\item {\bfЛовкост} – както повратливост и гъвкавост на цялото тяло, скорост, така и прецизност във фините задачи
+\item {\bfУм} – еродиция, памет, разсъдък, концентрация, наблюдателност
+\item {\bfХаризма} – увереност, емпатия, изразителност
+\end{itemize}
 
 \subsection{Умения}
 “Умение” наричаме практическо познание да се върши нещо, като придобиване на работно(професионално) ниво на умелост изисква няколко години. Нивото на владеене на всяко умение се оценява по скала от 0 до 15, като 15 е специална стойност.
