Cleanup of character creation.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -1,5 +1,4 @@
-\section{Създаване на персонаж}
-\subsection{Игрови персонажи}
+\section{Игрови персонажи}
 \emph{Ел'тлменел от селото Нлимна има резки чети за елф, и определено неестествен ръст на неговите метър и деведесет. Олекотената ризница от еленски рога не приквива силните му ръце и крака, а копието и лъка допълват картината на ловец/войн, само тъмнозеленото ленено наметало остава. Менел, както го наричат не-елфите навсякъде, е израстнал в гори, не умее да чете и е страшно глупав, когато става дума за светски дела.}
 
 Героите на нашето приключение трябва да бъдат описани по прост, но съдържателен начин. Това става с {\bf дарби, показатели и умения}.
@@ -8,15 +7,11 @@
 Това са свойства на перонажа, с които той започва, и не се очаква да могат да бъдат променени някога. Примери вкючват “Интуитивна ориентация в тъмното”, “Огнена кръв(раните не кървят, а веднага се затварят)”, “Слепота”. Персонажът Нафарфорий/Пешо се създава с едно “положително == помагащо му” качество. Или до още три, като за всяко допълнително “хубаво” качество, си харесваме по едно “лошо”. Стига се цупи де, лошите качества са крайно забавни за разиграване!
 
 \subsection{Показатели}
-Тяло – Сила, Ловкост
-Ум – Познание, Находчивост
-Излъчване – Карма, Харизма
-
 \begin{itemize}
-\item {\bfСила} – телесна маса, експлозивна сила, статична сила, умение да се концентрира силата на тялото, имунна система
-\item {\bfЛовкост} – както повратливост и гъвкавост на цялото тяло, скорост, така и прецизност във фините задачи
-\item {\bfУм} – еродиция, памет, разсъдък, концентрация, наблюдателност
-\item {\bfХаризма} – увереност, емпатия, изразителност
+\item {\bfСила} – телосложение, експлозивна сила, статична сила, умение да се концентрира силата на тялото, имунна система
+\item {\bfЛовкост} – както пъргавина и гъвкавост на цялото тяло, скорост, така и прецизност във фините задачи
+\item {\bfУм} – еродиция, памет, разсъдък, концентрация, наблюдателност, схватливост
+\item {\bfХаризма} – увереност, емпатия, изразителност, излъчване
 \end{itemize}
 
 \subsection{Умения}
@@ -32,5 +27,3 @@
 Екипировка не по-тежка от (Сила)кг означава пълна свобода на движенията. Придвижването за боен ход е (Сила + Ловкост + Ловкост)метра.
 Екипировка по-тежка от това, но не-повече от (2 х Сила)кг не пречи и персонажът може да изминава до (Сила + Ловкост) метра на боен ход.
 Екипировка над (2 х Сила)кг, но не повече от (5 х Сила)кг тежи много, огранича успеха на всички действия, свързани с движение на тялото с -5. Придвижването е ограничено до (Сила) метра на боен ход.
-
-\section{Точки опит}
