Bolded some key points. The rules shoulde be clear after just a glance, if read once.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -1,10 +1,20 @@
 \section{Игрови персонажи}
-\emph{Ел'тлменел от селото Нлимна има резки чети за елф, и определено неестествен ръст на неговите метър и деведесет. Олекотената ризница от еленски рога не приквива силните му ръце и крака, а копието и лъка допълват картината на ловец/войн, само тъмнозеленото ленено наметало остава. Менел, както го наричат не-елфите навсякъде, е израстнал в гори, не умее да чете и е страшно глупав, когато става дума за светски дела.}
+\emph{Ел'тлменел от селото Нлимна има резки чети за елф, и определено
+неестествен ръст на неговите метър и деведесет. Олекотената ризница
+от еленски рога не приквива силните му ръце и крака, а копието и лъка
+допълват картината на ловец/войн, само тъмнозеленото ленено наметало
+остава. Менел, както го наричат не-елфите навсякъде, е израстнал в гори,
+не умее да чете и е страшно глупав, когато става дума за светски дела.}
 
 Героите на нашето приключение трябва да бъдат описани по прост, но съдържателен начин. Това става с {\bf дарби, показатели и умения}.
 
 \subsection{Дарби}
-Това са свойства на перонажа, с които той започва, и не се очаква да могат да бъдат променени някога. Примери вкючват “Интуитивна ориентация в тъмното”, “Огнена кръв(раните не кървят, а веднага се затварят)”, “Слепота”. Персонажът Нафарфорий/Пешо се създава с едно “положително == помагащо му” качество. Или до още три, като за всяко допълнително “хубаво” качество, си харесваме по едно “лошо”. Стига се цупи де, лошите качества са крайно забавни за разиграване!
+Това са свойства на перонажа, с които той започва, и не се очаква да могат да
+бъдат променени някога. Примери вкючват “Интуитивна ориентация в тъмното”,
+“Огнена кръв(раните не кървят, а веднага се затварят)”, “Слепота”. Персонажът
+Нафарфорий/Пешо се създава с {\bfедно положително} == помагащо му качество.
+Или до {\bfоще три}, като за всяко допълнително “хубаво” качество, си харесваме
+по едно “лошо”. Стига се цупи де, лошите качества са крайно забавни за разиграване!
 
 \subsection{Показатели}
 \begin{itemize}
@@ -15,15 +25,26 @@
 \end{itemize}
 
 \subsection{Умения}
-“Умение” наричаме практическо познание да се върши нещо, като придобиване на работно(професионално) ниво на умелост изисква няколко години. Нивото на владеене на всяко умение се оценява по скала от 0 до 15, като 15 е специална стойност.
-При създаване на персонаж разполагаш с 30 точки, които да разпределиш по всичко, което твоят храбър Иван/Георги е научил в живота си до сега. Можете да слагаш до 10 точки на конкретно умение.
-Умеията могат да се развиват през време на играта с точки опит. Обаеч никое умение не може да бъде повишавано над 14 точки, освен при много особени обстоятелства.
-Всяко умение е базирано върху някой показател. Половината от показателя (закръглено надолу) се добавя към ранговете на умението, когато то се ползва. Повишаване на умение на повече рангове,  отколкото е показателят, струва по две точки за всеки ранг на умението.
+“Умение” наричаме практическо познание да се върши нещо, като придобиване на
+работно(професионално) ниво на умелост изисква няколко години. Нивото на
+владеене на всяко умение се оценява по скала от 0 до 15, като 15 е специална стойност.
+При създаване на персонаж разполагаш с 30 точки, които да разпределиш по всичко,
+което твоят храбър Иван/Георги е научил в живота си до сега. Можете да слагаш до 10 точки на конкретно умение.
+Умеията могат да се развиват през време на играта с точки опит. Обаче никое
+умение не може да бъде повишавано над 14 точки, освен при много особени обстоятелства.
+Всяко умение е базирано върху някой показател. Половината от показателя
+(закръглено надолу) се добавя към ранговете на умението, когато то се ползва.
+Повишаване на умение на повече рангове,  отколкото е показателят, струва по две
+точки за всеки ранг на умението.
 
-\subsection{Жизнени точки (ЖТ)}
-Жизнените точки са равни на Силата на персонажа. Когато сумата от всички травми стане равна или надхвърли жизнените точки, персонажът е издъхващ и е твърде зает да бере душа, за да върши нещо друго. 
-Рани и вреди се записват всяка по отделно. Ако сумата им е под половината максимални жизнени точки, по една точка се възстановява на седем дни, или по три на седем дни почивка. Ако ли са по-малко, само по една точка се възстановява на седем дни почивка и нито една без грижи.
-Носене
-Екипировка не по-тежка от (Сила)кг означава пълна свобода на движенията. Придвижването за боен ход е (Сила + Ловкост + Ловкост)метра.
-Екипировка по-тежка от това, но не-повече от (2 х Сила)кг не пречи и персонажът може да изминава до (Сила + Ловкост) метра на боен ход.
-Екипировка над (2 х Сила)кг, но не повече от (5 х Сила)кг тежи много, огранича успеха на всички действия, свързани с движение на тялото с -5. Придвижването е ограничено до (Сила) метра на боен ход.
+\subsection{Носене}
+Екипировка не по-тежка от (Сила)кг означава пълна свобода на движенията.
+Придвижването за боен ход е (Сила + Ловкост + Ловкост)метра.
+Екипировка по-тежка от това, но не-повече от (2 х Сила)кг не пречи и персонажът
+ може да изминава до (Сила + Ловкост) метра на боен ход.
+Екипировка над (2 х Сила)кг, но не повече от (5 х Сила)кг тежи много, огранича
+успеха на всички действия, свързани с движение на тялото с -5. Придвижването е
+ограничено до (Сила) метра на боен ход.
+
+\subsection{Предмети}
+Героите започват с един среден, три евтини и колкото си пожелаят много евтини предмети. Прогресията е много скъп(замък) - скъп(имение) - среден(двуръчен меч) - евтин(меч) - много евтин(щит, брадва).
