Formatted the combat section. Now only to learn to (calculate an) draw tables.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -1,4 +1,4 @@
-1\section{Бойна система}
+\section{Бойна система}
 \emph{Копитата тракат, капрата проскърцва. Ръми втори ден вече и макар
 промазаната качулка да пази лицето ми, ботушите ми са пълни с вода и джвакат.
 Сют е кочияш на работа и пияница в другото време, вече от ден не сме си
@@ -44,32 +44,83 @@
 Една характеристика на оръжията е обсегът от Сила, за който са ефективни. Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие. От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
 Друга характеристика са щетите на оръжието. Условно наричаме “ниски” щети от малки оръжия за една ръка, “средни” - тези на по-големите едноръчни оръжия и “високи” тези на повечето двуръчни оръжия.  Самото оръжие може да има бонус или наказание върху щетите си, редом с качествата на оръжието.
 Обсегът на оръжията има различен смисъл за ръкопашни и далечни оръжия. При ръкопашните оръжия, това е оптималната дистанция. На всички по-близки дистанции оръжието има наказание от -5 боравене и половин щети. За далечни оръжия, обсегът е максималното разстрояние, на което лесно може да се улучи цел. На по-голямо от това разстояние атаката е с -5 наказание, на по-голямо от два пъти това разстояние става -10 и на от три до четири пъти това разстояние е на -15. Чести стойности за обсег са (Сила/2) – метателен нож, (Сила) – метателно копие, (Сила х 2) – лък .
+
 Също така, оръжията могат да имат някои от следните свойства.
-%\being{enumerate}
-%\item{повратливост (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
-%\item{бронебойност I (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
-%\item{бронебойност II (клиновидни, тежки остриета; намаля абсорбацията на ¼)}
-%\item{трудно за вадене (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
-%\item{поваляне (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
-%\item{обезоръжаване (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"-а на щит)}
-%\end{enumerate}
+\begin{enumerate}
+\item{повратливост (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
+\item{бронебойност I (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
+\item{бронебойност II (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
+\item{трудно за вадене (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
+\item{поваляне (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
+\item{обезоръжаване (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
+\end{enumerate}
+
+\subsection{Брони}
+Защитната стойност на броните се получава от това каква част от тялото е общо покрита.
+Пазене:
+\begin{itemize}
+\item{Шлем за темето(селяшки, евентуално с периферия) 1}
+\item{Шлем с открито лице(с набузници или кръст за носа и очите, каска) 2}
+\item{Шлем със забрало(пълен шлем) 3}
+\item{Яка (към пълен шлем или като отделен компонент) +1}
+
+\item{Кираса/Бронежилетка 5}
+
+\item{Паудрони (част от ризница с къси ръкави или като отделен компонент) +1}
+\item{Налакътници (част от дълга ризница или отделен компонент) +1}
+\item{Ръкавици +1}
+
+\item{Сабатони (бронирани ботуши) +1}
+\item{Грейвси (броня от коленото надолу по пищяла) +1}
+\item{Набедреници(може да е пола, част от дълга ризница или отделен компонент) +1}
+\end{itemize}
+
+Общо максимум: 15
+
+Здравина:
+Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 4
+\begin{itemize}
+\item{Халчеста броня, подплатена с гамбезон 6}
+\item{Ламенарна броня, подплатена с гамбезон 9}
+\item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 12}
+\item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 15}
+Теглата на копонентите клонят към една десета от произведенито на покритието и здравината си.
+\end{itemize}
+
+\subsection{Механика}
+Нека си дойдем на думата. Удар или група удари (едно ръкопашно действие) се групират в обща цел – нападение или защита. Нападащият добавя d6* към боравенето си и сравнява с боравене на отбраняващият се, който се отбранява с всички средства налични – отбягва, парира.
+Подробности:
+\begin{itemize}
+\item[-]{отбраняване само чрез отбягване носи наказание от -5, но добавя +5 на боравене при атаки срещу тази конкретна цел на следващия ход}
+\item[-]{отбраняване от втори нападател търпи наказание от -5; от трети общо -10 и т.н.}
+\end{itemize}
+
+Ако нападателя има повече, съществени удари са достигнали целта. Ако нападателя има повече от боравене на защитника + пазене на броните му, поне един удар е попаднал в небронирана област.
 
 \subsection{Специални правила}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{../images/siege}~
+\includegraphics[width=0.75\textwidth]{../images/siege}~
 \\[1cm]
 \end{center}
 
-Езда
-нивото на ползване на умения от гърба на кон е ограничено до нивото на умението “езда”
-ръкопашни атаки от и по ездач на галопиращ кон са с двойни щети
-атаки от и по ездач на кон с късо оръжие търпят -5 атака
+\subsubsection{Кавалерия}
 
-Две оръжия
+\subsubsection{Езда}
+\begin{itemize}
+\item[-]{нивото на ползване на умения от гърба на кон е ограничено до нивото на умението “езда”}
+\item[-]{ръкопашни атаки от и по ездач на галопиращ кон са с двойни щети}
+\item[-]{атаки от и по ездач на кон с късо оръжие търпят -5 атака}
+\end{itemize}
+
+\subsubsection{Две оръжия}
 Едното оръжие се ползва за да нанесе щети на врага, нека наречем него първо. Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака). Ако се атакува само с едното оръжие няма наказания, разбира се.
 
-Щит
-Щитът е направен да е второ оръжие. Като такъв не търпи -5 когато се ползва за защита.
-пазене от стрели 0/6 (бъклър) през 2/6(кръгъл викингски) през 4/6(дълъг римски) до 6/6 (павис). Това когато активно се криеш от стрелите, разбира се.
-Дървените щитове имат здравина 15, а стоманените 30. Това обикновено няма значерние, но силни или бронебойни атаки може да преодолеят успешно блокиране.
-\subsubsection{Кавалерия}
+\subsubsection{Щит}
+\begin{itemize}
+\item[-]{Щитът е направен да е второ оръжие. Като такъв не търпи -5 когато се ползва за защита.}
+\item[-]{пазене от стрели 0/6 (бъклър) през 2/6(кръгъл викингски) през 4/6(дълъг римски) до 6/6 (павис). Това когато активно се криеш от стрелите, разбира се.}
+\item[-]{Дървените щитове имат здравина 15, а стоманените 30. Това обикновено няма значерние, но силни или бронебойни атаки може да преодолеят успешно блокиране.}
+\end{itemize}
+
+\subsection{Таблица щети}
+
