Enforced coding rule - one sentance per line. This is supposed to simplify writing and editing.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -1,22 +1,30 @@
 \section{Бойна система}
-\emph{Копитата тракат, капрата проскърцва. Ръми втори ден вече и макар
-промазаната качулка да пази лицето ми, ботушите ми са пълни с вода и джвакат.
-Сют е кочияш на работа и пияница в другото време, вече от ден не сме си
-казвали нищо, нека си дърпа юздите. \\
-В гората напред край пътя – движение. \\
-“СПРИ!” викам. Фургонът спира, конете цвилят. Две къси копия прелитат,
-убиват единия кон. Крадците връхлитат. Хващам щита от куката и скачам,
-халчестата ризница дрънчи, вадя меча. Вече замахва нож, устремявам щита
-към главата му и сека към коленете. Удрям и го повалям, втори ми е странично
-и опитва да забоде ножа в ребрата ми, но ризницата пази. Убивам го. От
-капрата връхлита секирата, отсяква главата на Сют.}
+\emph{Копитата тракат, капрата проскърцва.
+Ръми втори ден вече и макар промазаната качулка да пази лицето ми, ботушите ми са пълни с вода и джвакат.
+Сют е кочияш на работа и пияница в другото време, вече от ден не сме си казвали нищо, нека си дърпа юздите.
+\\
+В гората напред край пътя – движение.
+\\
+“СПРИ!” викам.
+Фургонът спира, конете цвилят.
+Две къси копия прелитат, убиват единия кон.
+Крадците връхлитат.
+Хващам щита от куката и скачам, халчестата ризница дрънчи, вадя меча.
+Вече замахва нож, устремявам щита към главата му и сека към коленете.
+Удрям и го повалям, втори ми е странично и опитва да забоде ножа в ребрата ми, но ризницата пази.
+Убивам го. От капрата връхлита секирата, отсяква главата на Сют.}
 
 \vspace{5mm} \indent
 От бойната система се очаква да е както проста и лесна, непречеща на разказването на историята, така и детайлна и категорична, позволяваща вглъбяване в динамиката на онези кратки моменти, в които страшно смелият ни герой е с единия крак в гроба.
-В случай на ръкопашен бой се разглеждат отрязъци от по няколко такта на сърцето. За такова време е достатъчно да замахнеш по арка с голямо оръжие, да нанесеш няколко удара с дръжка на пистолет или рапира, да извадиш стрела от колчана.
-За престрелки се разглеждат отрязъци от порядъка на сто такта на сърцето. Това отразява търсене на укритие, презареждане на арбалет или побиване на стрели в земята за лък, дебнене дупка в прикриващия огън при огнестрелни оръжия.
+В случай на ръкопашен бой се разглеждат отрязъци от по няколко такта на сърцето.
+За такова време е достатъчно да замахнеш по арка с голямо оръжие, да нанесеш няколко удара с дръжка на пистолет или рапира, да извадиш стрела от колчана.
+За престрелки се разглеждат отрязъци от порядъка на сто такта на сърцето.
+Това отразява търсене на укритие, презареждане на арбалет или побиване на стрели в земята за лък, дебнене дупка в прикриващия огън при огнестрелни оръжия.
 Действието се случва на най фината/бързата скала, присъстваща на бойното поле.
-Например, когато тичащата пехота е на разстояние 300 метра от срелците с дълъг лък, играем по гранулярността за престрелки.  Бронираната милиция изминава разстоянието, стрелците правят 6 залпа на регулярни разстояние във времето. След това настава клане и играем по гранулярността за меле. Впрочем и двете групи са сега изморени, тъй каот са прекарали цял дълъг хот в интензивно натоварване, и търпят наказание от -5.
+Например, когато тичащата пехота е на разстояние 300 метра от срелците с дълъг лък, играем по гранулярността за престрелки.
+Бронираната милиция изминава разстоянието, стрелците правят 6 залпа на регулярни разстояние във времето.
+След това настава клане и играем по гранулярността за меле.
+Впрочем и двете групи са сега изморени, тъй каот са прекарали цял дълъг хот в интензивно натоварване, и търпят наказание от -5.
 
 \subsection{Тактове време}
 \subsection{Ръкопашни дистанции}
@@ -28,22 +36,35 @@
 \item{отдалечена (пика)}
 \item{извън ръкопашен обхват (стрелящи неща)}
 \end{enumerate}
-Инициатива за първия удар има този с по-дълго оръжие (очевидно)
+Инициатива за първия удар има този с по-дълго оръжие (очевидно).
 Извън оптималната си дистанция, оръжията са на -5 атака и половин щети.
-Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита). Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции. 
+Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита).
+Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции. 
 
 Пример:
 \emph{Пешо, с копие и нож, напада Жоро, с меч.
-Пешо връхлита и напада с копието. Хвърля боравене + d6* < боравене на Жоро. Жоро е отбягнал атаката и може да промени дистанцията. Пешо заплашва дълга (копие една ръка) и близка(нож). Жоро може да избере близка, средна, дълга, отдалечена или да избяга.
+Пешо връхлита и напада с копието.
+Хвърля боравене + d6* < боравене на Жоро.
+Жоро е отбягнал атаката и може да промени дистанцията.
+Пешо заплашва дълга (копие една ръка) и близка(нож)
+Жоро може да избере близка, средна, дълга, отдалечена или да избяга.
 }
 
 \subsection{Стрелба}
 Защитата на движеща се цел се равнява на нейната ловкост.
 
 \subsection{Оръжия}
-Една характеристика на оръжията е обсегът от Сила, за който са ефективни. Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие. От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
-Друга характеристика са щетите на оръжието. Условно наричаме “ниски” щети от малки оръжия за една ръка, “средни” - тези на по-големите едноръчни оръжия и “високи” тези на повечето двуръчни оръжия.  Самото оръжие може да има бонус или наказание върху щетите си, редом с качествата на оръжието.
-Обсегът на оръжията има различен смисъл за ръкопашни и далечни оръжия. При ръкопашните оръжия, това е оптималната дистанция. На всички по-близки дистанции оръжието има наказание от -5 боравене и половин щети. За далечни оръжия, обсегът е максималното разстрояние, на което лесно може да се улучи цел. На по-голямо от това разстояние атаката е с -5 наказание, на по-голямо от два пъти това разстояние става -10 и на от три до четири пъти това разстояние е на -15. Чести стойности за обсег са (Сила/2) – метателен нож, (Сила) – метателно копие, (Сила х 2) – лък .
+Една характеристика на оръжията е обсегът от Сила, за който са ефективни
+Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие.
+От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
+Друга характеристика са щетите на оръжието. Условно наричаме “ниски” щети от малки оръжия за една ръка, “средни” - тези на по-големите едноръчни оръжия и “високи” тези на повечето двуръчни оръжия.
+Самото оръжие може да има бонус или наказание върху щетите си, редом с качествата на оръжието.
+Обсегът на оръжията има различен смисъл за ръкопашни и далечни оръжия.
+При ръкопашните оръжия, това е оптималната дистанция.
+На всички по-близки дистанции оръжието има наказание от -5 боравене и половин щети.
+За далечни оръжия, обсегът е максималното разстрояние, на което лесно може да се улучи цел.
+На по-голямо от това разстояние атаката е с -5 наказание, на по-голямо от два пъти това разстояние става -10 и на от три до четири пъти това разстояние е на -15.
+Чести стойности за обсег са (Сила/2) – метателен нож, (Сила) – метателно копие, (Сила х 2) – лък .
 
 Също така, оръжията могат да имат някои от следните свойства.
 \begin{enumerate}
@@ -88,14 +109,17 @@
 \end{itemize}
 
 \subsection{Механика}
-Нека си дойдем на думата. Удар или група удари (едно ръкопашно действие) се групират в обща цел – нападение или защита. Нападащият добавя d6* към боравенето си и сравнява с боравене на отбраняващият се, който се отбранява с всички средства налични – отбягва, парира.
+Нека си дойдем на думата.
+Удар или група удари (едно ръкопашно действие) се групират в обща цел – нападение или защита.
+Нападащият добавя d6* към боравенето си и сравнява с боравене на отбраняващият се, който се отбранява с всички средства налични – отбягва, парира.
 Подробности:
 \begin{itemize}
 \item[-]{отбраняване само чрез отбягване носи наказание от -5, но добавя +5 на боравене при атаки срещу тази конкретна цел на следващия ход}
 \item[-]{отбраняване от втори нападател търпи наказание от -5; от трети общо -10 и т.н.}
 \end{itemize}
 
-Ако нападателя има повече, съществени удари са достигнали целта. Ако нападателя има повече от боравене на защитника + пазене на броните му, поне един удар е попаднал в небронирана област.
+Ако нападателя има повече, съществени удари са достигнали целта.
+Ако нападателя има повече от боравене на защитника + пазене на броните му, поне един удар е попаднал в небронирана област.
 
 \subsection{Специални правила}
 \begin{center}
@@ -113,7 +137,9 @@
 \end{itemize}
 
 \subsubsection{Две оръжия}
-Едното оръжие се ползва за да нанесе щети на врага, нека наречем него първо. Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака). Ако се атакува само с едното оръжие няма наказания, разбира се.
+Едното оръжие се ползва за да нанесе щети на врага, нека наречем него първо.
+Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака).
+Ако се атакува само с едното оръжие няма наказания, разбира се.
 
 \subsubsection{Щит}
 \begin{itemize}
@@ -123,4 +149,3 @@
 \end{itemize}
 
 \subsection{Таблица щети}
-
