Added items list. Onlu the damage table has not yet been copied over.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -10,5 +10,6 @@
 \include{character_creation_and_evolution}
 \include{combat_system}
 \include{magic_system}
+\include{items_skills_perks}
 \tableofcontents
 \end{document}
