--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -69,3 +69,28 @@
 Свойства: бронебойност
 Тегло: 4кг
 
+\section{Умения}
+\subsection{Общуване}
+Лъжене (Чар)
+Сплашване (Чар)
+Изтезаване/Разпитване (Чар)
+Емпатия (Чар)
+Четене по устните (Чар)
+Молене (Чар)
+
+\subsection{Академични}
+Език* (Ум)
+Наука* (Ум)
+
+\subsection(Схватки)
+Оръжие* (Ловкост)
+Военна машина* (Ум)
+
+\subsection{Магия}
+Огън (Ум)(0 ниво - пламва плат, 1 ниво - пламва греда, 2 ниво - пламва барака, 3 ниво ниво - пламва квартал, 4 ниво - пламва пламва град или дворец, 5 ниво - разтапя град, 6 ниво - разтапя замък, 7 ниво - подпалва кралство, 8 ниво - изпепелява кралство в горяща магма)
+Лекуване (Ум) - лекуване по щети Ум средни на зар.
+Вятър (Ум) - мъгла, ниво 2 мълния щяти по Ум, високи.
+Гадаене (Ум) - телевизор
+Превръщане (Ум) - на предмети или същества в други.
+Отвъд (Ум) - разговаряне с души, вдигане на мъртви.
+Създаване - храна и вода, предмети и създания.
