Added command prototypes. Now to implement them.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -4,7 +4,7 @@
 Менел, както го наричат не-елфите навсякъде, е израстнал в гори, не умее да чете и е страшно глупав, когато става дума за светски дела.}
 
 Героите на нашето приключение трябва да бъдат описани по прост, но съдържателен начин.
-Това става с {\bf дарби, показатели и умения}.
+Това става с \textbf{дарби, показатели и умения}.
 
 \subsection{Дарби}
 Това са свойства на перонажа, с които той започва, и не се очаква да могат да бъдат променени някога.
