--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -180,3 +180,54 @@
 28 4d   5d+2 8d
 29 4d+1 6d-1 8d+1
 30 4d+1 6d   8d+2
+
+\subsection{Масови сражения}
+Групи от съюзници могат да бъдат събирани в "строй".
+Не е нужно групата да е хомогенна, но трябва да имат обща цел.
+
+\subsubsection{Характеристики на строй}
+\begin{itemize}
+% Структурни
+\item{Лице - брой бойци с достъп до врага.}
+\item{Гъстота - от 1:1 (стена от щитове) до 1:5 (цвайхендери)}
+\item{Връхлитане - х1.5 за пешаци, х3 за конница}
+\item{Придвижване - равно на придвижването на най-бавният.}
+
+% Състояние
+\item{Брой - живи / ранени / убити.}
+\item{Морал - спадне ли до 0, строят се превръща в "тълпа".}
+
+% Компетентност и екипировка
+\item{Ръкопашен бой - Сила + (1/10)сума(боравене * средни щети)}
+\item{Стрелба - Сила + (1/10)сума(боравене * щети)}
+\item{Броня - Сила + (1/10)сума(пазене * здравина), включително щитове}
+\end{itemize}
+
+\subsubsection{Правила}
+Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника.
+
+Директна стрелба (под 1 инкремент на оръжието) следва правилата за ръкопашен бой. Стрелба до максималното разстояние на хвърляне на оръжието е на половина.
+
+Лице и Дълбочина. Един строй може да бъде нападнат едновременно от най-много толкова строеве, сумата от чиито лица е колкото на нападнатите.
+
+Ако броят живи спадне под числото лице, строят се разпада (превръща се в тълпа).
+
+Ранените бойци са боеспособни, но намалят придвижването на стоя на половина. Лекуването им отнема половин месец.
+
+Морал. При виждане на разбиване на приятелски сторй, или ако бягащ разбит строй премине през позициите на друг строй, морал се намаля с 1.
+
+При морал 0, строят се разбира и се превръща в тълпа.
+
+Войници не в строй (а в тълпа) правят всяко хвърляне два пъти и вземат по-малкия зар / търпят наказание на всичко от -5 (коя е по-добрата механика?).
+
+При виждане на поне двойно числено превъзхождащ противник, всеки строй губи 1 морал.
+
+При виждане на подготвящ се да връхлети двойно по-многоброен или много по-добре екипиран строй, строят губи 1 морал.
+
+Моралът се възстановява извън битка с 1 точка на минута.
+
+\subsubsection{Примери}
+Редица
+Колона
+Клин
+Тълпа
