Prettier tables. No less pretty than Endival. Yey.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -149,6 +149,7 @@
 \end{itemize}
 
 \subsection{Таблица щети}
+\rowcolors{1}{white}{gray}
 \begin{tabular}{l | c | c | c}
 Сила & *1/2 & *2/3 & *1  \\
 1  & d-3  & d-3  & d-2   \\
