--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[bulgarian]{babel}
 \usepackage[pdftex]{graphicx}
+\usepackage[table]{xcolor}     % For coloured rows within tables.
 
 % Commands.
 % \newcommand{name}[num]{definition}
