--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -6,6 +6,7 @@
 \usepackage[bulgarian]{babel}
 \usepackage[pdftex]{graphicx}
 \usepackage[table]{xcolor}     % For coloured rows within tables.
+\usepackage{fullpage}          % Set left and right margin to 1 inch - much less than the default.
 
 % Commands.
 % \newcommand{name}[num]{definition}
