Replaced the boring text about carry weight with a table. Works with a glance.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -32,11 +32,14 @@
 Повишаване на умение на повече рангове,  отколкото е показателят, струва по две точки за всеки ранг на умението.
 
 \subsection{Носене}
-Екипировка не по-тежка от (Сила)кг означава пълна свобода на движенията.
-Придвижването за боен ход е (Сила + Ловкост + Ловкост)метра.
-Екипировка по-тежка от това, но не-повече от (2 х Сила)кг не пречи и персонажът може да изминава до (Сила + Ловкост) метра на боен ход
-Екипировка над (2 х Сила)кг, но не повече от (5 х Сила)кг тежи много, огранича успеха на всички действия, свързани с движение на тялото с -5.
-Придвижването е ограничено до (Сила) метра на боен ход.
+\rowcolors{1}{white}{gray}
+\begin{tabular}{l | l | l }
+Максимален товар, кг & Придвижване, м            & Наказание  \\
+Сила                 & Сила + Ловкост + Ловкост  & -0         \\
+Сила * 2             & Сила + Ловкост            & -0         \\
+Сила * 5             & Сила                      & -5
+\end{tabular}
+
 
 \subsection{Предмети}
 Героите започват с един среден, три евтини и колкото си пожелаят много евтини предмети.
