Removed a boring text section. TODO: describe the time granularity in a table.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -14,17 +14,8 @@
 Удрям и го повалям, втори ми е странично и опитва да забоде ножа в ребрата ми, но ризницата пази.
 Убивам го. От капрата връхлита секирата, отсяква главата на Сют.}
 
-\vspace{5mm} \indent
-От бойната система се очаква да е както проста и лесна, непречеща на разказването на историята, така и детайлна и категорична, позволяваща вглъбяване в динамиката на онези кратки моменти, в които страшно смелият ни герой е с единия крак в гроба.
-В случай на ръкопашен бой се разглеждат отрязъци от по няколко такта на сърцето.
-За такова време е достатъчно да замахнеш по арка с голямо оръжие, да нанесеш няколко удара с дръжка на пистолет или рапира, да извадиш стрела от колчана.
-За престрелки се разглеждат отрязъци от порядъка на сто такта на сърцето.
-Това отразява търсене на укритие, презареждане на арбалет или побиване на стрели в земята за лък, дебнене дупка в прикриващия огън при огнестрелни оръжия.
-Действието се случва на най фината/бързата скала, присъстваща на бойното поле.
-Например, когато тичащата пехота е на разстояние 300 метра от срелците с дълъг лък, играем по гранулярността за престрелки.
-Бронираната милиция изминава разстоянието, стрелците правят 6 залпа на регулярни разстояние във времето.
-След това настава клане и играем по гранулярността за меле.
-Впрочем и двете групи са сега изморени, тъй каот са прекарали цял дълъг хот в интензивно натоварване, и търпят наказание от -5.
+%\vspace{5mm} \indent
+%TODO: add a brief introduction
 
 \subsection{Тактове време}
 \subsection{Ръкопашни дистанции}
