Split the text about weapon characteristics into bullet points for improved readability.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -45,17 +45,23 @@
 Защитата на движеща се цел се равнява на нейната ловкост.
 
 \subsection{Оръжия}
-Една характеристика на оръжията е обсегът от Сила, за който са ефективни
+\begin{itemize}
+\item {\bfСила} \\
+Това е обсегът на Сила на героят, в който оръжието е ефективно.
 Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие.
 От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
-Друга характеристика са щетите на оръжието. Условно наричаме “ниски” щети от малки оръжия за една ръка, “средни” - тези на по-големите едноръчни оръжия и “високи” тези на повечето двуръчни оръжия.
+\item {\bfЩети} \\
+Условно наричаме “ниски” щети от малки оръжия за една ръка, “средни” - тези на по-големите
+едноръчни оръжия и “високи” тези на повечето двуръчни оръжия.
 Самото оръжие може да има бонус или наказание върху щетите си, редом с качествата на оръжието.
+\item {\bfОбсег} \\
 Обсегът на оръжията има различен смисъл за ръкопашни и далечни оръжия.
 При ръкопашните оръжия, това е оптималната дистанция.
 На всички по-близки дистанции оръжието има наказание от -5 боравене и половин щети.
 За далечни оръжия, обсегът е максималното разстрояние, на което лесно може да се улучи цел.
 На по-голямо от това разстояние атаката е с -5 наказание, на по-голямо от два пъти това разстояние става -10 и на от три до четири пъти това разстояние е на -15.
-Чести стойности за обсег са (Сила/2) – метателен нож, (Сила) – метателно копие, (Сила х 2) – лък .
+Чести стойности за обсег са (Сила/2) – метателен нож, (Сила) – метателно копие, (Сила х 2) – лък.
+\end{itemize}
 
 Също така, оръжията могат да имат някои от следните свойства.
 \begin{enumerate}
