Removed a couple of words to avoid focusing on unimportant details.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -116,15 +116,13 @@
 \end{itemize}
 
 Ако нападателя има повече, съществени удари са достигнали целта.
-Ако нападателя има повече от боравене на защитника + пазене на броните му, поне един удар е попаднал в небронирана област.
+Ако нападателя има повече от боравене на защитника + пазене на броните му, е поразена небронирана област.
 
 \subsection{Специални правила}
 \begin{center}
 \includegraphics[width=0.75\textwidth]{../images/siege}~
 \\[1cm]
 \end{center}
-
-\subsubsection{Кавалерия}
 
 \subsubsection{Езда}
 \begin{itemize}
