Simplified slightly the mass combat rules.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -192,13 +192,14 @@
 \item{Придвижване - равно на придвижването на най-бавният.}
 
 % Състояние
-\item{Брой - живи / ранени / убити.}
-\item{Морал - спадне ли до 0, строят се превръща в "тълпа".}
+\item{Брой живи - бойци в добро здраве.}
+\item{Брой ранени - небоеспособни, в ръцете на леакрите след битка.}
+\item{Морал - равен на Дисциплина(Инт), спадне ли до 0, строят се превръща в "тълпа".}
 
 % Компетентност и екипировка
-\item{Ръкопашен бой - Сила + (1/10)сума(боравене * средни щети)}
-\item{Стрелба - Сила + (1/10)сума(боравене * щети)}
-\item{Броня - Сила + (1/10)сума(пазене * здравина), включително щитове}
+\item{Ръкопашен бой - Сила + най-високото боравене с налично ръкопашно оръжие.}
+\item{Стрелба - Сила + най-високото боравене с налично далечно оръжие}
+\item{Броня - Сила + (1/10)сума(пазене * здравина), без щитове}
 \end{itemize}
 
 \subsubsection{Правила}
@@ -206,7 +207,7 @@
 
 Директна стрелба (под 1 инкремент на оръжието) следва правилата за ръкопашен бой. Стрелба до максималното разстояние на хвърляне на оръжието е на половина.
 
-Лице и Дълбочина. Един строй може да бъде нападнат едновременно от най-много толкова строеве, сумата от чиито лица е колкото на нападнатите.
+Лице и Дълбочина. Един строй може да бъде нападнат едновременно от най-много толкова строеве, сумата от чиито лица е колкото два пъти лицето на  нападнатите.
 
 Ако броят живи спадне под числото лице, строят се разпада (превръща се в тълпа).
 
@@ -216,16 +217,10 @@
 
 При морал 0, строят се разбира и се превръща в тълпа.
 
-Войници не в строй (а в тълпа) правят всяко хвърляне два пъти и вземат по-малкия зар / търпят наказание на всичко от -5 (коя е по-добрата механика?).
+Войници не в строй (а в тълпа) търпят наказание на всичко от -5.
 
 При виждане на поне двойно числено превъзхождащ противник, всеки строй губи 1 морал.
 
 При виждане на подготвящ се да връхлети двойно по-многоброен или много по-добре екипиран строй, строят губи 1 морал.
 
 Моралът се възстановява извън битка с 1 точка на минута.
-
-\subsubsection{Примери}
-Редица
-Колона
-Клин
-Тълпа
